IMPALA-2531: null_probe_rows != NULL DCHECK failed

The DCHECK was incorrect because null_probe_rows_ can be NULL if opening
the partition fails, e.g. with out of memory.

Change-Id: Iffe367bebc42c255b3888034dff6168f5a14d5c7
Reviewed-on: http://gerrit.cloudera.org:8080/1233
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Internal Jenkins